--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Imports: 
-    data.table,
-    stringr
+    devtools,
+    stats,
+    testthat
+Config/testthat/edition: 3
