updated class export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,9 @@ export(adjMatrixResults)
 export(designMatrix)
 export(filterAdjMatrix)
 export(filteredGenes)
-export(fitLms)
 export(getProdeInput)
-export(getRandomBetas)
-export(getRandomBetasPar)
-export(getRealBetas)
 export(prodeResults)
 export(results)
+export(runProde)
 exportClasses(prodeInput)
 import(methods)
