--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(adjMatrixResults)
 export(designMatrix)
 export(filterAdjMatrix)
 export(filteredGenes)
+export(fitLms)
 export(getProdeInput)
 export(prodeResults)
 export(results)
