--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,22 +3,23 @@ Title: Prode Tool
 Version: 0.0.0.9000
 Authors@R: 
     person("Thomas", "Cantore", , "thomas.cantore@unitn.it", role = c("aut", "cre"))
-Description: proDe tool.
+Description: The prodeTool package implements PRODE, an analysis workflow that integrates Gene Effects data and Protein-Protein
+    Interactions to compute per-gene, Neighborhood-Informed Essential (NIE) and Neighborhood-Informed Context Essential (NICE) scores.NIE and NICE scores are computed through a rank-based approach where average Gene Effects (across multiple samples) or Differential Gene Effects (between two groups of samples) are combined at gene-level and neighborhood level. The resulting NIE and NICE scores can be leveraged as essentiality or context-essentiality measures for genes prioritization purposes. The more negative the scores, the better the signal. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Depends: 
-    R (>= 2.10),
+    R (>= 3.6)
+Imports: 
+    stats,
+    methods,
+    Matrix, 
     S4Vectors,
     SummarizedExperiment
-Imports: 
+Suggests: 
     devtools,
-    stats,
-    testthat, 
-    methods,
-    Matrix
-Suggests: testthat (>= 3.0.0)
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Collate: 
     'AllClasses.R'
