--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(filterAdjMatrix)
 export(filteredGenes)
 export(fitLms)
 export(getProdeInput)
+export(modality)
 export(prodeResults)
 export(results)
 export(runProde)
 exportClasses(prodeInput)
+import(SummarizedExperiment)
 import(methods)
