--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,12 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 LazyData: true
+Collate: 
+    'allClasses.R'
+    'allClassesAccessors.R'
+    'data.R'
+    'fitLms.R'
+    'getProdeInput.R'
+    'getRhos.R'
+    'runProde.R'
+    'utils.R'
