--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(getProdeInput)
 export(modality)
 export(results)
 export(runProde)
+export(runProdeCI)
+export(weights)
 exportClasses(prodeInput)
 exportClasses(prodeResults)
 import(S4Vectors)
